# tldraw-vf-env

./: .gitignore  README.md  pyproject.toml  run_docker_eval.sh
configs/: tldraw-intellect-3-test.toml  tldraw-intellect-3.toml
environments/tldraw/: .gitignore  README.md  bootstrap_env.py  dataset.py  dedupe_prompts.py  prompt_fetch.py  prompts.jsonl  pyproject.toml  system_prompt.py  system_prompt.txt  tldraw.py  validator-bridge.md  validator_client.py
environments/tldraw/.prime/: .env-metadata.json
environments/tldraw/tldraw-agent/: .gitignore  README.md  pnpm-lock.yaml  validator.html  vite.config.ts
environments/tldraw/tldraw-agent/client/: index.css
environments/tldraw/tldraw-agent/client/validator/: ValidatorApp.tsx  bridge.ts
environments/tldraw/tldraw-agent/worker/: environment.ts  models.ts
environments/tldraw/tldraw-agent/worker/do/: AgentService.ts
environments/tldraw/tldraw_shapes/: __init__.py  geo.py  rich_text.py  styles.py  validators.py
tldraw-agent/: package.json  tsconfig.json  vite.config.ts  wrangler.toml
tldraw-agent/client/validator/: bridge.ts  main.tsx
tldraw-agent/worker/prompt/: buildMessages.ts
