[project]
name = "tldraw"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "playwright>=1.43.0",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "tldraw.py",
    "bootstrap_env.py",
    "dataset.py",
    "validator_client.py",
    "system_prompt.txt",
    "tldraw-agent/**",
    "pyproject.toml",
]
exclude = [
    "tldraw-agent/node_modules/**",
    "tldraw-agent/dist/**",
    "tldraw-agent/.vite/**",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
