[project]
name = "tldraw"
description = "Single-turn tool-use environment that validates tldraw actions via a local UI."
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "playwright>=1.43.0",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "tldraw.py",
    "bootstrap_env.py",
    "dataset.py",
    "system_prompt.py",
    "validator_client.py",
    "tldraw-agent/**",
    "pyproject.toml",
]
exclude = [
    "tldraw-agent/node_modules/**",
    "tldraw-agent/dist/**",
    "tldraw-agent/.vite/**",
]

[tool.hatch.build.targets.wheel]
include = [
    "tldraw.py",
    "bootstrap_env.py",
    "dataset.py",
    "system_prompt.py",
    "validator_client.py",
    "tldraw-agent/**",
    "pyproject.toml",
]
exclude = [
    "tldraw-agent/node_modules/**",
    "tldraw-agent/dist/**",
    "tldraw-agent/.vite/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "tldraw.py",
    "bootstrap_env.py",
    "dataset.py",
    "system_prompt.py",
    "validator_client.py",
    "tldraw-agent/**",
    "pyproject.toml",
]
exclude = [
    "tldraw-agent/node_modules/**",
    "tldraw-agent/dist/**",
    "tldraw-agent/.vite/**",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
